[gd_scene load_steps=5 format=2]

[ext_resource path="res://Script/Arma02.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Bala.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/arma02.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 224.608

[node name="Arma02" type="Node2D"]
script = ExtResource( 1 )
Bala = ExtResource( 2 )

[node name="arma02" type="Sprite" parent="."]
scale = Vector2( 0.417188, 0.417188 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Arma_izquierda" type="Position2D" parent="."]
position = Vector2( 26, -8.344 )
z_index = 2

[node name="Arma_derecha" type="Position2D" parent="."]
position = Vector2( 26, 8.344 )
z_index = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
